Weitere änderungen, TODOs hinzugefügt, ViewModel klasse hinzugefügt

--- a/FMAApp/FMAApp.csproj
+++ b/FMAApp/FMAApp.csproj
@@ -58,6 +58,7 @@
     <Compile Include="RecipeCreationWindow.xaml.cs">
       <DependentUpon>RecipeCreationWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Session.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
