Ich hab keine Ahnung was passiert ist. Binding geht jetzt. Rezepthandler als einzige static klasse. Ich heule

--- a/FMAApp/FMAApp.csproj
+++ b/FMAApp/FMAApp.csproj
@@ -64,6 +64,7 @@
     <Compile Include="AllWindows\RecipeCreationWindow.xaml.cs">
       <DependentUpon>RecipeCreationWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Engine\RezeptHandler.cs" />
     <Compile Include="Session.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
